# kreimben.com

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bac  Instagram.py  README.md  configure.py  deploy_in_amd64.sh  docker-compose.yml  entry.sh  event.py  index.html  index.js  index.ts  index.tsx  insta.js  lambda_handler.py  main.py  manage.py  next.config.js  nginx.conf  package-lock.json  package.json  postcss.configure.js  requirements.dev.txt  requirements.txt  server.js  server.ts  tailwind.config.js  tsconfig.json  upload_favicon.py  vue.config.js  webpack.config.js  webpack.configure.js  웹펙이였던것.js
Backend/: docker-compose.yml
Frontend/: Dockerfile  docker-compose.yml  nginx.conf
StrapiServer/: .env  docker-compose.yml
app/: .instagram_token  configure.py  frontend.py  main.py  sql_app.db
ascii_art/: ascii.py
blog/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
chat/: admin.py  consumers.py  models.py  urls.py  views.py
components/: CardView.tsx  Layout.js  Layout.tsx  Menu.js  Menu.tsx  loremipsum.js
custom_account/: apps.py  urls.py  views.py
database/: crud.py  database.py  firebase.py  kreimben-com-firebase-adminsdk-37j58-dd6f28039b.json  main.py  models.py  schemas.py
home/: urls.py  views.py
image_to_ascii_art/: admin.py  apps.py  ascii.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
kreimben_com/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
model/: APIKey.ts  DateParser.ts  Posts.ts  getPost.ts
pages/: .._app 2.tsx.icloud  _app.js  _app.tsx  _document.tsx  (+6 more)
(+685 files in other folders)
