[package]
name = "my_web_server"
version = "0.1.0"
authors = ["Aksidion Kreimben <aksidion@kreimben.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.74"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
