[package]
name = "my_web_server"
version = "0.1.0"
authors = ["Aksidion Kreimben <aksidion@kreimben.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "secrets", "tls", "json", "uuid" ] }
curl = "0.4.42"
